feat: support tag (#159)
