# api/swagger.yml
@@ -422,6 +422,63 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/MergeRequest"
+    TagList:
+      type: object
+      required:
+        - pagination
+        - results
+      properties:
+        pagination:
+          $ref: "#/components/schemas/Pagination"
+        results:
+          type: array
+          items:
+            $ref: "#/components/schemas/Tag"
+    TagCreation:
+      type: object
+      required:
+        - name
+        - target
+      properties:
+        name:
+          type: string
+        target:
+          type: string
+          description: target branch name or commit hex, first try branch and then commit
+        message:
+          type: string
+    Tag:
+      type: object
+      required:
+        - id
+        - repository_id
+        - name
+        - creator_id
+        - target
+        - created_at
+        - updated_at
+      properties:
+        id :
+          type: string
+          format: uuid
+        repository_id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        creator_id:
+          type: string
+          format: uuid
+        target:
+          type: string
+        message:
+          type: string
+        created_at:
+          type: integer
+          format: int64
+        updated_at:
+          type: integer
+          format: int64
     Branch:
       type: object
       required:
@@ -2395,7 +2452,7 @@ paths:
           schema:
             type: string
       responses:
-        204:
+        200:
           description: branch delete successfully
         401:
           description: Unauthorized
@@ -2423,6 +2480,133 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Branch"
+        400:
+          description: ValidationError
+        404:
+          description: Resource Not Found
+        409:
+          description: Resource Conflicts With Target
+        420:
+          description: Too many requests
+        default:
+          description: Internal Server Error
+
+
+  /repos/{owner}/{repository}/tags:
+    parameters:
+      - in: path
+        name: owner
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: repository
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - tags
+      operationId: listTags
+      summary: list tags
+      parameters:
+        - $ref: "#/components/parameters/PaginationPrefix"
+        - $ref: "#/components/parameters/PaginationInt64After"
+        - $ref: "#/components/parameters/PaginationAmount"
+      responses:
+        200:
+          description: tag list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TagList"
+        401:
+          description: Unauthorized
+        404:
+          description: Resource Not Found
+        420:
+          description: Too many requests
+        default:
+          description: Internal Server Error
+
+  /repos/{owner}/{repository}/tag:
+    parameters:
+      - in: path
+        name: owner
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: repository
+        required: true
+        schema:
+          type: string
+    get:
+      tags:
+        - tags
+      operationId: getTag
+      summary: get tag
+      parameters:
+        - in: query
+          name: refName
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: tag
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
+        401:
+          description: Unauthorized
+        404:
+          description: Resource Not Found
+        420:
+          description: Too many requests
+        default:
+          description: Internal Server Error
+    delete:
+      tags:
+        - tags
+      operationId: deleteTag
+      summary: delete tag
+      parameters:
+        - in: query
+          name: refName
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: tag delete successfully
+        401:
+          description: Unauthorized
+        404:
+          description: Resource Not Found
+        420:
+          description: Too many requests
+        default:
+          description: Internal Server Error
+    post:
+      tags:
+        - tags
+      operationId: createTag
+      summary: create tag
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TagCreation"
+      responses:
+        201:
+          description: create tag success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tag"
         400:
           description: ValidationError
         404:
